<resources>
    <string name="app_name">Bee Healthy</string>
    <string name="NomeCompleto">Nome Completo</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="inscrição">Estou me inscrevendo no \beeHealthy para ser:</string>
    <string name="Paciente">Paciente</string>
    <string name="Nutricionista">Nutricionista</string>
    <string name="Inscrever">Inscrever-se</string>
    <string name="Esp">Especialiação</string>
    <string name="Nome">Nome</string>
    <string name="tel">Telefone</string>
    <string name="End">Endereço</string>
    <string name="busca">Digite o nome do nutricionista</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Pesquisa">Digite o a palavra para a busca</string>
    <string name="LogOut">Sair</string>
    <string name="consulta">Agendar Consulta</string>
    <string name="connect_error">Erro na conexão</string>
    <string name="web_service_url">https://f0c09e5e.ngrok.io</string>
    <string name="no_data_available">Busque por um nutricionista</string>
    <string name="nEncontrado">\"Não Encontrado\"</string>
    <string name="Data">Data:</string>
    <string name="Local">Local:</string>
    <string name="ConsultaMarcada">Consultas Marcadas</string>
    <string name="CRN">CRN</string>
    <string name="title_activity_nutritionist_menu">Menu do Nutricionista</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">Cadastro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client_details">Detalhes do Cliente</string>
    <string name="title_activity_plan_list">Plano Semanal</string>
    <string name="title_activity_nutritionist_plan_detail">Plano do dia</string>
    <string name="title_activity_nutritionist_plan_add">Adicionar Plano</string>
    <string name="title_activity_article_add">Adicionar Artigo</string>
    <string name="title_activity_article">Artigo</string>

    <string name="crn">crn</string>
    <string name="Marcar">Marcar Consulta</string>
    <string name="local">Local</string>
    <string name="cancelarConsulta">Cancelar Consulta</string>
    <string name="DataConsulta">Data</string>
    <string name="ConsultCancelada">Consulta Cancelada</string>
    <string name="Nasc">Nascimento:</string>
    <string name="AlterarDados">Atualizar Dados</string>
    <string name="SenhaAnt">Senha Antiga</string>
    <string name="SenhaNova">Senha Nova</string>
    <string name="SenhaNovaRep">Repita a senha nova</string>
    <string name="Cafe">Café da Manhã</string>
    <string name="Alm">Almoço</string>
    <string name="Lanche">Lanche</string>
    <string name="Plano">Suas Dietas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="config">Configurações</string>
</resources>
