<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlterarPaciente">

    <EditText
        android:id="@+id/alterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"/>

    <EditText
        android:id="@+id/alterNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/Nasc"/>

    <EditText
        android:id="@+id/alterSenhaAnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/SenhaAnt"/>

    <EditText
        android:id="@+id/alterSenhaNova"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/SenhaNova"/>

    <EditText
        android:id="@+id/alterSenhaNovaRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/SenhaNovaRep"/>

    <Button
        android:id="@+id/Alter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AlterarDados" />
</LinearLayout>