<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">



    <LinearLayout
        tools:context=".Register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/NomeCompleto"
            tools:layout_editor_absoluteX="99dp"
            android:layout_marginBottom="5dp"
            tools:layout_editor_absoluteY="218dp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="263dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Senha"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="263dp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/inscrição"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="455dp" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkPacient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/Paciente"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="478dp" />

            <RadioButton
                android:id="@+id/checkDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/Nutricionista"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="540dp" />
        </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Inscrever"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="512dp"
            android:onClick="Autenticar"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>