<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_articles">

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.usjt.beehealthy.Activities.Nutritionist.ui.articles.ArticleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_consults"
        android:name="com.usjt.beehealthy.Activities.Nutritionist.ui.consult.ConsultFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_consult" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.usjt.beehealthy.Activities.Nutritionist.ui.client.ClientsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.usjt.beehealthy.Activities.Nutritionist.ui.profile.ProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_profile" />
</navigation>